--- a/block-BHaacj/assets/styles/style.css
+++ b/block-BHaacj/assets/styles/style.css
@@ -72,7 +72,11 @@ body{
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    
+}
+:root{
+    --primary: #FFFFFF;
+    --skyblue:#6AC6BA;
+    --pink:#C66995;
 }
 /* header styles */
 .padding-sides{
@@ -91,13 +95,13 @@ body{
     margin-left: 10px;
 }
 .header{
-    background-color: #FFFFFF;
+    background-color: var(--primary);
     width:100%;
     z-index: 1;
     margin-top:0;
 }
 .header .light-green a{
-    color:#6AC6BA;
+    color:var(var(--skyblue));
 }
 /* hero section styles */
 
@@ -109,7 +113,7 @@ body{
     /* margin-top:10vh; */
 }
 .image-txt{
-    color:white;
+    color:var(--primary);
     height:24vh;
     padding-top:8vh ;
     /* border: 2px solid blue; */
@@ -117,11 +121,11 @@ body{
 .image-txt .round{
     width:40px;
     height:40px;
-    background-color:#6AC6BA;
+    background-color:var(--skyblue);
     border-radius: 50%;
 }
 .fas{
-    color:white;
+    color:var(--primary);
 }
 .image-txt h1{
     font-size: 45px;
@@ -147,11 +151,14 @@ label input,label select{
     max-width:100%;
     padding-right:120px;
 } 
+.form-control{
+    width:100%;
+    display: block;
+}
 label{
     color:#383B3F;
     font-weight:700;
     font-size: 15px;
-    
 }
 label input,label select{
     margin-top:30px;
@@ -188,8 +195,8 @@ select{
     padding:18px 0;
     width:100%;
     text-align: center;
-    background-color: #6AC6BA;
-    color:white;
+    background-color: var(--skyblue);
+    color:var(--primary);
     font-weight: 700;
     font-size:18px;
     border:0;
@@ -218,13 +225,13 @@ select{
     font-size: 16px;
 }
 .btn-secondary{
-    background-color: white;
-    color:#6AC6BA;
+    background-color: var(--primary);
+    color:var(--skyblue);
     width:30%;
     margin-top:20px;
 }
 .btn-teritary{
-    color:#C66995;
+    color:var(--pink);
 }
 /* article section styles */
 .article-img img{
@@ -239,9 +246,9 @@ select{
     width:100%;
 }
 .article-text-1{
-    background-color: #6AC6BA;  
+    background-color: var(--skyblue);  
 }.article-text-2{
-    background-color: #C66995;  
+    background-color: var(--pink);  
 }
 .flex2{
     display: flex;
@@ -263,7 +270,7 @@ select{
 }
 .article-heading{
     font-size: 30px;
-    color:white;
+    color:var(--primary);
     margin-bottom:15px;
     font-weight: 600;
 }
@@ -285,7 +292,7 @@ select{
     margin-right:5px;
 }
 .whole-articles{
-    background-color: #FFFFFF;
+    background-color: var(--primary);
 }
 .article-img{
     height:50vh;
@@ -304,7 +311,7 @@ select{
     justify-content: flex-end;
     margin-bottom:30px;
     font-size:15px;
-    color:white;
+    color:var(--primary);
 }
 .box{
     display: flex;
@@ -316,36 +323,36 @@ select{
     text-align: center;
 }
 .box-2-1{
-    background:url(../images/north-america.png) center center no-repeat,linear-gradient(to right,#6AC6BA,#6AC6BA);
+    background:url(../images/north-america.png) center center no-repeat,linear-gradient(to right,var(--skyblue),var(--skyblue));
 }
 .box-2-2{
-    background:url(../images/south-america.png) center center no-repeat,linear-gradient(to right,#6AC6BA,#6AC6BA);
+    background:url(../images/south-america.png) center center no-repeat,linear-gradient(to right,var(--skyblue),var(--skyblue));
 }
 .box-2-3{
-    background:url(../images/europe.png) center center no-repeat,linear-gradient(to right,#6AC6BA,#6AC6BA);
+    background:url(../images/europe.png) center center no-repeat,linear-gradient(to right,var(--skyblue),var(--skyblue));
 }
 .box-2-4{
-    background:url(../images/asia.png) center center no-repeat,linear-gradient(to right,#C66995,#C66995);
+    background:url(../images/asia.png) center center no-repeat,linear-gradient(to right,var(--pink),var(--pink));
 }
 .box-2-5{
-    background:url(../images/africa.png) center center no-repeat,linear-gradient(to right,#6AC6BA,#6AC6BA);
+    background:url(../images/africa.png) center center no-repeat,linear-gradient(to right,var(--skyblue),var(--skyblue));
 }
 .box-2-6{
-    background:url(../images/australia.png) center center no-repeat,linear-gradient(to right,#6AC6BA,#6AC6BA);
+    background:url(../images/australia.png) center center no-repeat,linear-gradient(to right,var(--skyblue),var(--skyblue));
 }
 .box-2-7{
-    background:url(../images/antartica.png) center center no-repeat,linear-gradient(to right,#6AC6BA,#6AC6BA);
+    background:url(../images/antartica.png) center center no-repeat,linear-gradient(to right,var(--skyblue),var(--skyblue));
 }
 /* horizontal card styles */
 .add-padding{
     padding:60px;
-    background-color: #FFFFFF;
+    background-color: var(--primary);
 }
 .small-container{
     max-width: 1000px;
     margin:0 auto; 
     border:0.01px solid rgb(233, 233, 233);
-    background-color: #FFFFFF;
+    background-color: var(--primary);
     margin-bottom:20px;
 }
 .card-img{
@@ -377,7 +384,7 @@ select{
 }
 .card-price-tags{
     flex:0 1 22%;
-    background-color:#6AC6BA;
+    background-color:var(--skyblue);
     text-align: center;
 }
 .price-tag-text{
@@ -385,7 +392,7 @@ select{
     flex-direction:column;
 }
 .price-tag-text .article-para{
-    color:white;
+    color:var(--primary);
     font-weight:600;
 }
 .btn-padding{
@@ -401,11 +408,12 @@ select{
 .map-section iframe{
     width:100%;
     height: 650px;
+    position:relative;
 }
 .map-section .form{
     width:500px;
     padding:20px;
-    background-color: #FFFFFF;
+    background-color: var(--primary);
     position: absolute;
     left:1000px;
     top:30px;
@@ -423,7 +431,6 @@ select{
     background-color: #F5F5F5;
 }
 textarea{
-    width:100%;
     height:200px;
     background-color: #F5F5F5;
     border:0;
@@ -450,14 +457,23 @@ fieldset .subject{
 .map-section input::placeholder{
     font-size:18px;
 }
+.map-section .overlay{
+    width:100%;
+    height:650px;
+    background: linear-gradient(to right,rgba(80, 80, 80, 0.459),rgba(80, 80, 80, 0.459));
+    position:absolute;
+    top:2px;
+    left:218px;
+    max-width:1400px;
+}
 .subject::placeholder{
     font-size:18px;
     padding-left:10px;
 }
 /* footer section styles */
 .container-section{
-    background-color: #6AC6BA;
+    background-color: var(--skyblue);
     padding:40px 0;
-    color:#FFFFFF;
+    color:var(--primary);
     text-align: center;
 }
